# ScoreFourAI

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: pages.yml
data/: opening_book.json
docs/: book_web_and_learning.md  design.md  eval_measurements.md  opening_book_windows.md  roadmap.md  rules.md
docs/benchmarks/: baseline.json  dfpn.md  geometry_eval.json  geometry_eval.md  geometry_eval_holdout.json  quiescence.md
docs/experiments/: geometric_relational_eval.md
rust/: Cargo.toml  pyproject.toml
rust/src/: board.rs  evaluate.rs  lib.rs  lines.rs  python_api.rs  search.rs  symmetry.rs  wasm_api.rs
scripts/: benchmark.py  benchmark_dfpn.py  benchmark_geometry_eval.py  build_wasm.sh  export_web_book.py  generate_book.py  generate_problems.py  learn_from_book.py  selfplay_from_book.py  train_eval.py  train_eval_from_selfplay.py
src/score_four/: __init__.py  board.py  book.py  dfpn.py  evaluate.py  learn.py  lines.py  problems.py  search.py  selfplay.py  solve.py  symmetry.py
tests/: test_analyze.py  test_board.py  test_book.py  test_dfpn.py  test_evaluate.py  test_geometry.py  test_learn.py  test_lines.py  test_ordering.py  test_problems.py  test_quiescence.py  test_rust_core.py  test_rust_search.py  test_rust_solve.py  test_search.py  test_selfplay.py  test_solve.py  test_symmetry.py
web/: app.js  book.json  engine-worker.js  engine.wasm  index.html
