[package]
name = "score_four_rs"
version = "0.0.1"
edition = "2021"
description = "Score Four (gravity 4x4x4) engine in Rust (PyO3 extension + WASM)"

[lib]
name = "score_four_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module", "abi3-py311"], optional = true }

[features]
# 既定は Python 拡張 (maturin / cargo の通常ビルド)。
default = ["python"]
python = ["dep:pyo3"]
# ブラウザ向け: cargo build --target wasm32-unknown-unknown --no-default-features --features wasm
wasm = []

[profile.release]
opt-level = 3
lto = true
